--- a/Views/Home/Cart.cshtml
+++ b/Views/Home/Cart.cshtml
@@ -1,6 +1,6 @@
-﻿<link rel="stylesheet" type="text/css" href="~/css/Cart.css"> 
-<link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.13.4/css/jquery.dataTables.min.css"> 
-<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/2.3.6/css/buttons.dataTables.min.css"> 
+﻿<link rel="stylesheet" type="text/css" href="~/css/Cart.css">
+<link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.13.4/css/jquery.dataTables.min.css">
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/2.3.6/css/buttons.dataTables.min.css">
 <section id="content-wrapper">
 
     <div class="page-title">
@@ -8,61 +8,64 @@
             <h1>Cart</h1>
         </div>
         <div>
-           <a href="./NewIndent"><button class="common-button common-blue-button"><span class="material-symbols-rounded">add</span>ADD ITEM</button></a> 
+            <a href="./NewIndent"><button class="common-button common-flex-icon-btn common-blue-button"><span
+                        class="material-symbols-rounded">add</span>ADD ITEM</button></a>
         </div>
 
     </div>
 
     <div class="container">
-                <div class="filter-wrap">
-                    <div class="row">
+        <div class="filter-wrap">
+            <div class="row">
 
-                        <div class="col-md-3">
-                            <div class="form-group">
-                                <select class="form-control" id="sel1" disabled name="sellist1">
-                                    <option value="" id="plant_name" ></option>
-                                </select>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="form-group">
-                                <select class="form-control" id="sel2" name="sellist1"></select>
-                                <span class="error-msg" id="cartdropbox1" style="display: none;">*The location field is required.</span>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="form-group">
-                                <select class="form-control" id="sel3" name="sellist1">
-                                </select>
-                            </div>
-                        </div>
-                        <div class="col-md-2">
-                            <div class="form-group">
-                                <select class="form-control" id="sel4"  name="sellist1">
-                                    <option value="0">Delivery Type*</option>
-                                    <option>Self Pickup</option>
-                                    <option>Store</option>
-                                </select>
-                                <span class="error-msg" id="cartdropbox2" style="display: none;">*The DeliveryType field is required..</span>
-                            </div>
-                        </div>
-                        <div class="col-md-1">
-                            <div class="">
-                                <input type="checkbox" id="urgent-indent" name="Urgent Indent" value="1">
-                                <label for="Urgent Indent">Urgent Indent</label>
-                            </div>
-                        </div>
-
+                <div class="col-md-2">
+                    <div class="form-group">
+                        <select class="form-control" id="sel1" disabled name="sellist1">
+                            <option value="" id="plant_name"></option>
+                        </select>
                     </div>
                 </div>
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <select class="form-control" id="sel2" name="sellist1"></select>
+                        <span class="error-msg" id="cartdropbox1" style="display: none;">*The location field is
+                            required.</span>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <select class="form-control" id="sel3" name="sellist1">
+                        </select>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="form-group">
+                        <select class="form-control" id="sel4" name="sellist1">
+                            <option value="0">Delivery Type*</option>
+                            <option>Self Pickup</option>
+                            <option>Store</option>
+                        </select>
+                        <span class="error-msg" id="cartdropbox2" style="display: none;">*The DeliveryType field is
+                            required..</span>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="">
+                        <input type="checkbox" id="urgent-indent" name="Urgent Indent" value="1">
+                        <label for="Urgent Indent">Urgent Indent</label>
+                    </div>
+                </div>
+
             </div>
+        </div>
+    </div>
 
 
-            <div class="container-fluid">
-            <div id="tableid">
-            <form id="formId">   
-                <div class="product-cart-wrapp table-responsive" >
-                    <table class="table table-striped" id="example" >
+    <div class="container-fluid">
+        <div id="tableid">
+            <form id="formId">
+                <div class="product-cart-wrapp table-responsive">
+                    <table class="table table-striped" id="example">
                         <thead>
                             <tr>
                                 <th>SI No</th>
@@ -82,89 +85,6 @@
                         </thead>
 
                         <tbody id="tbody">
-                            @* <tr>
-                                <td class="vmiddle">
-                                    <div>1</div>
-                                </td>
-                                <td class="vmiddle">
-                                    <div>All Pin</div>
-                                </td>
-                                <td>
-                                    <div>
-                                        <input type="text" class="form-control" id="usr">
-                                    </div>
-                                </td>
-                                <td class="vmiddle">
-                                    <div>
-                                        $12.5
-                                    </div>
-                                </td>
-                                <td>
-                                    <div>
-                                        <input type="date" class="form-control" id="usr">
-                                    </div>
-                                </td>
-                                <td>
-                                    <div>
-                                        <div class="">
-                                            <select class="form-control" id="sel1">
-                                                <option>1</option>
-                                                <option>2</option>
-                                                <option>3</option>
-                                                <option>4</option>
-                                            </select>
-                                        </div>
-                                    </div>
-                                </td>
-                                <td>
-                                    <div>
-                                        <input type="text" class="form-control" id="usr">
-                                        <p>0 / 2</p>
-                                    </div>
-                                </td>
-                                <td>
-                                    <div>
-                                        <input type="text" class="form-control" id="usr">
-                                        <p>0 / 20</p>
-                                    </div>
-                                </td>
-                                <td>
-                                    <div>
-                                        <input type="text" class="form-control" id="usr">
-                                    </div>
-                                    <p>0 / 50</p>
-                                </td>
-                                <td>
-                                    <div>
-                                        <textarea class="form-control" rows="1" id="comment"></textarea>
-                                        <p> 0 / 100</p>
-                                    </div>
-                                </td>
-                                <td>
-                                    <div>
-                                        <textarea class="form-control" rows="1" id="comment"></textarea>
-                                        <p>0 / 50</p>
-                                    </div>
-                                </td>
-                                <td>
-                                    <div>
-                                        <div class="">
-                                            <select class="form-control" id="sel1">
-                                                <option>1</option>
-                                                <option>2</option>
-                                                <option>3</option>
-                                                <option>4</option>
-                                            </select>
-                                        </div>
-                                    </div>
-                                </td>
-                                <td>
-                                    <div>
-                                        <span><a><i class="fa fa-trash" aria-hidden="true"></i></a></span>
-                                    </div>
-                                </td>
-                            </tr> *@
-
                         </tbody>
 
                     </table>
@@ -172,18 +92,20 @@
                 </div><br>
                 <div class="cart-buttons-wrap">
 
-                    <button class="common-button common-blue-button" onclick="window.print();return false;"><span class="material-symbols-rounded">print</span> PREVIEW INDENT</button>
+                    <button class="common-button common-blue-button common-flex-icon-btn" onclick="window.print();return false;"><span
+                            class="material-symbols-rounded">print</span> PREVIEW INDENT</button>
 
-                    <button class="common-button common-orange-button"  onclick="clearcart()">CLEAR</button>
+                    <button class="common-button common-orange-button" onclick="clearcart()">CLEAR</button>
 
-                    <button type="submit" class="common-button common-yellow-button" onclick="Pordectorder()">PLACE INDENT</button>
+                    <button type="submit" class="common-button common-yellow-button" onclick="Pordectorder()">PLACE
+                        INDENT</button>
 
-                </div>  
+                </div>
             </form>
-            </div>
-            <br>
-            <div id="showmsg"></div>
-            </div>
+        </div>
+        <br>
+        <div id="showmsg"></div>
+    </div>
 </section>
 <br><br>
 
@@ -196,26 +118,26 @@
         <span>Loading....</span>
     </div>
 </div>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
 @* <script src="https://code.jquery.com/jquery-3.5.1.js"></script> *@
-    <script src="//cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/buttons/2.3.6/js/dataTables.buttons.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
-    <script src="https://cdn.datatables.net/buttons/2.3.6/js/buttons.html5.min.js"></script>
-    <script src="https://cdn.datatables.net/buttons/2.3.6/js/buttons.print.min.js"></script>
+<script src="//cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/buttons/2.3.6/js/dataTables.buttons.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
+<script src="https://cdn.datatables.net/buttons/2.3.6/js/buttons.html5.min.js"></script>
+<script src="https://cdn.datatables.net/buttons/2.3.6/js/buttons.print.min.js"></script>
 
-    <script src="~/js/main.js"></script>
-    <script src="~/js/cart/cart.js"></script>
-    <script>
+<script src="~/js/main.js"></script>
+<script src="~/js/cart/cart.js"></script>
+<script>
 
-            $("#example").DataTable({
-                dom: "Bfrtip",
-                buttons: ["print"],
-                paging: false,
-                info: false,
-            });
+    $("#example").DataTable({
+        dom: "Bfrtip",
+        buttons: ["print"],
+        paging: false,
+        info: false,
+    });
 
 
-    </script>
+</script>
