--- a/Views/Home/Vendors.cshtml
+++ b/Views/Home/Vendors.cshtml
@@ -1,4 +1,16 @@
 ﻿ <link rel="stylesheet" type="text/css" href="~/css/common.css">
+<style>
+.error-msg {
+  display: none;
+  color: red;
+  font-size: small;
+}
+
+.error {
+ font-size: small;
+}
+
+</style>
 <section id="content-wrapper">
             <div class="page-title">
                 <h1>Manage Vendors</h1>
@@ -17,31 +29,31 @@
                                         <div class="form-group">
                                             <label for="usr">Vendor Name<span>*</span></label>
                                             <input type="text" name="name" class="form-control" id="usr" required>
-                                            <span class="Error-show error-msg1"></span>
+                                            <span class="errmsg error-msg1"></span>
                                         </div>
                                         <div class="form-group">
                                             <label for="usr">Contact Name<span>*</span></label>
                                             <input type="text" name="contactname" class="form-control" id="usr" required>
-                                            <span class="Error-show error-msg2"></span>
+                                            <span class="errmsg error-msg2"></span>
                                         </div>
                                         <div class="form-group">
                                             <label for="number">Mobile Number<span>*</span></label>
                                             <input type="tel" name="phone" id="phone" name="phone" class="form-control" required>
-                                            <span class="Error-show error-msg3"></span>
+                                            <span class="errmsg error-msg3"></span>
                                         </div>
                                         <div class="form-group">
                                             <label for="comment">Address<span>*</span></label>
                                             <textarea class="form-control" name="address" rows="3" id="comment" required></textarea>
-                                            <span class="Error-show error-msg4"></span>
+                                            <span class="errmsg error-msg4"></span>
                                         </div>
                                         <div class="form-group">
                                             <label for="comment">Remark</label>
-                                            <textarea class="form-control" name="remark" rows="3" id="comment" required></textarea>
-                                            <span class="Error-show error-msg5"></span>
+                                            <textarea class="form-control" name="remark" rows="3" id="comment"></textarea>
+                                            <span class="errmsg error-msg5"></span>
                                         </div>
                                     </div>
                                     <div class="vendors-buttons-wrap">
-                                        <button type="rest" class="common-button common-orange-button">RESET</button>
+                                        <button type="reset" class="common-button common-orange-button">RESET</button>
                                         <button type="submit" class="common-button common-blue-button" id ="submit-form">SAVE</button>
                                     </div>
                                 </form>
