--- a/wwwroot/css/Home/NewIndent.css
+++ b/wwwroot/css/Home/NewIndent.css
@@ -6,6 +6,7 @@
   color: #2f3640;
   margin: 1.3em 10px;
   transition: all linear 0.2s;
+  min-height: 468px;
 }
 /* .product-card :hover {
   box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px,
@@ -126,6 +127,9 @@
   .product-card-wrap .col-sm-6.col-md-6.col-lg-3.card-cut-col {
     flex: 0 0 100%;
     max-width: 100%;
+  }
+  .product-card {
+    min-height: unset;
   }
 }
 /* --------------------------------PRODUCT CARD END--------------------------------------- */
