--- a/Views/Home/Report.cshtml
+++ b/Views/Home/Report.cshtml
@@ -1,3 +1,45 @@
 ﻿<section id="content-wrapper">
     <h1>Report page</h1>
+
+    <table id="example" class="display nowrap" style="width:100%">
+        <thead>
+            <tr>
+                <th>S NO</th>
+                <th>Indent Date</th>
+                <th>Indent No</th>
+                <th>Indent Status</th>
+                <th>Indent Total Quantity</th>
+                <th>Indent Price</th>
+                <th>Indent Location</th>
+                <th>Indent Raised By</th>
+                <th>Approved By</th>
+                <th>dispatch location</th>
+                <th>Department Name</th>
+                <th>Indentre Mail ID</th>
+                <th>Indenter Mobile No</th>
+            </tr>
+        </thead>
+        <tbody id="tbody">
+            @* <tr>
+            <td>Tiger Nixon</td>
+            <td>System Architect</td>
+            <td>Edinburgh</td>
+            <td>61</td>
+            <td>2011-04-25</td>
+            <td>$320,800</td>
+            </tr> *@
+        </tbody>
+    </table>
 </section>
+
+<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+@* <script
+src="https://cdn.datatables.net/buttons/2.3.6/js/buttons.print.min.js"></script>
+*@
+@* <script
+src="https://cdn.datatables.net/buttons/2.3.6/js/dataTables.buttons.min.js"></script>
+*@
+
+<script src="https://cdn.datatables.net/1.13.5/js/jquery.dataTables.min.js"></script>
+<script src="~/js/main.js"></script>
+<script src="~/js/Report/Report.js"></script>
