--- a/wwwroot/css/common.css
+++ b/wwwroot/css/common.css
@@ -128,6 +128,12 @@ a:focus {
 .bg-orange {
   background-color: #f95424;
 }
+.bg-green-darken {
+  background-color: #009688;
+}
+.bg-cancelled {
+  background-color: rgb(224 224 224);
+}
 
 /* --------------------------------COMMON CSS END--------------------------------------- */
 
